syntax = "proto3";

package resources.accounts;

import "resources/timestamp/timestamp.proto";

option go_package = "github.com/fivenet-app/fivenet/v2025/gen/go/proto/resources/accounts;accounts";

message OAuth2Account {
  uint64 account_id = 1;
  optional resources.timestamp.Timestamp created_at = 2;
  string provider_name = 3;
  OAuth2Provider provider = 4;
  string external_id = 5;
  string username = 6;
  string avatar = 7;
}

message OAuth2Provider {
  string name = 1;
  string label = 2;
  string homepage = 3;
  optional string icon = 4;
}
